fixed a bug where the ipad would squish ipad icons

--- a/drupal/sites/all/themes/tp4/css/styles.css
+++ b/drupal/sites/all/themes/tp4/css/styles.css
@@ -10110,7 +10110,7 @@ body.node-type-campaign-card-twitter p.campaign-content-meta {
   /* line 1544, ../sass/page/_campaigns.scss */
   .tweet .tweet-left {
     float: left;
-    width: 26.5%;
+    width: 29.5%;
     margin-right: 0px;
   }
 }
@@ -10156,7 +10156,7 @@ body.node-type-campaign-card-twitter p.campaign-content-meta {
   .tweet .tweet-right {
     float: right;
     margin-left: 3%;
-    width: 70.5%;
+    width: 65.5%;
   }
 }
 @media all and (min-width: 980px) {
