--- a/drupal/sites/all/themes/tp4/sass/page/_campaigns.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_campaigns.scss
@@ -1549,7 +1549,7 @@ p.campaign-content-meta{
     }
     @include breakpoint($breakpoint-tablet){
     float: left;
-    width: 26.5%;
+    width: 29.5%;
     margin-right: 0px;
 
     }
@@ -1588,7 +1588,7 @@ p.campaign-content-meta{
     @include breakpoint($breakpoint-tablet){
     float: right;
     margin-left: 3%;
-    width: 70.5%;
+    width: 65.5%;
     }
     @include breakpoint($breakpoint-desktop){
     float: right;
